src/oci_policy_analysis/logic/parsers/condition_parser/OciIamPolicyConditionParser.py
# Generated from ./OciIamPolicyCondition.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OciIamPolicyConditionParser ( Parser ):

    grammarFileName = "OciIamPolicyCondition.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "'!='", "'>'", "'<'", "'>='", "'<='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "','", "'.'", "'{'", "'}'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "ALL", "ANY", "AND", "OPERATOR", "EQ", 
                      "NEQ", "GT", "LT", "GTE", "LTE", "IN_OP", "BEFORE", 
                      "AFTER", "BETWEEN", "COMMA", "DOT", "OPEN_CURLY", 
                      "CLOSE_CURLY", "OPEN_PAREN", "CLOSE_PAREN", "OCID", 
                      "STRING_LITERAL", "PATTERN_LITERAL", "IDENTIFIER", 
                      "WHITESPACE", "COMMENT" ]

    RULE_condition_clause = 0
    RULE_condition_expression = 1
    RULE_condition_list = 2
    RULE_single_condition = 3
    RULE_variable_name = 4
    RULE_condition_value = 5
    RULE_literal_list = 6
    RULE_literal_list_content = 7
    RULE_all_or_any = 8

    ruleNames =  [ "condition_clause", "condition_expression", "condition_list", 
                   "single_condition", "variable_name", "condition_value", 
                   "literal_list", "literal_list_content", "all_or_any" ]

    EOF = Token.EOF
    ALL=1
    ANY=2
    AND=3
    OPERATOR=4
    EQ=5
    NEQ=6
    GT=7
    LT=8
    GTE=9
    LTE=10
    IN_OP=11
    BEFORE=12
    AFTER=13
    BETWEEN=14
    COMMA=15
    DOT=16
    OPEN_CURLY=17
    CLOSE_CURLY=18
    OPEN_PAREN=19
    CLOSE_PAREN=20
    OCID=21
    STRING_LITERAL=22
    PATTERN_LITERAL=23
    IDENTIFIER=24
    WHITESPACE=25
    COMMENT=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Condition_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition_expression(self):
            return self.getTypedRuleContext(OciIamPolicyConditionParser.Condition_expressionContext,0)


        def EOF(self):
            return self.getToken(OciIamPolicyConditionParser.EOF, 0)

        def getRuleIndex(self):
            return OciIamPolicyConditionParser.RULE_condition_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_clause" ):
                listener.enterCondition_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_clause" ):
                listener.exitCondition_clause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_clause" ):
                return visitor.visitCondition_clause(self)
            else:
                return visitor.visitChildren(self)




    def condition_clause(self):

        localctx = OciIamPolicyConditionParser.Condition_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_condition_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.condition_expression()
            self.state = 19
            self.match(OciIamPolicyConditionParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def single_condition(self):
            return self.getTypedRuleContext(OciIamPolicyConditionParser.Single_conditionContext,0)


        def all_or_any(self):
            return self.getTypedRuleContext(OciIamPolicyConditionParser.All_or_anyContext,0)


        def OPEN_CURLY(self):
            return self.getToken(OciIamPolicyConditionParser.OPEN_CURLY, 0)

        def condition_list(self):
            return self.getTypedRuleContext(OciIamPolicyConditionParser.Condition_listContext,0)


        def CLOSE_CURLY(self):
            return self.getToken(OciIamPolicyConditionParser.CLOSE_CURLY, 0)

        def getRuleIndex(self):
            return OciIamPolicyConditionParser.RULE_condition_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_expression" ):
                listener.enterCondition_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_expression" ):
                listener.exitCondition_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_expression" ):
                return visitor.visitCondition_expression(self)
            else:
                return visitor.visitChildren(self)




    def condition_expression(self):

        localctx = OciIamPolicyConditionParser.Condition_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_condition_expression)
        try:
            self.state = 27
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 21
                self.single_condition()
                pass
            elif token in [1, 2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 22
                self.all_or_any()
                self.state = 23
                self.match(OciIamPolicyConditionParser.OPEN_CURLY)
                self.state = 24
                self.condition_list()
                self.state = 25
                self.match(OciIamPolicyConditionParser.CLOSE_CURLY)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OciIamPolicyConditionParser.Condition_expressionContext)
            else:
                return self.getTypedRuleContext(OciIamPolicyConditionParser.Condition_expressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(OciIamPolicyConditionParser.COMMA)
            else:
                return self.getToken(OciIamPolicyConditionParser.COMMA, i)

        def getRuleIndex(self):
            return OciIamPolicyConditionParser.RULE_condition_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_list" ):
                listener.enterCondition_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_list" ):
                listener.exitCondition_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_list" ):
                return visitor.visitCondition_list(self)
            else:
                return visitor.visitChildren(self)




    def condition_list(self):

        localctx = OciIamPolicyConditionParser.Condition_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_condition_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.condition_expression()
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 30
                self.match(OciIamPolicyConditionParser.COMMA)
                self.state = 31
                self.condition_expression()
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_conditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_name(self):
            return self.getTypedRuleContext(OciIamPolicyConditionParser.Variable_nameContext,0)


        def OPERATOR(self):
            return self.getToken(OciIamPolicyConditionParser.OPERATOR, 0)

        def condition_value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OciIamPolicyConditionParser.Condition_valueContext)
            else:
                return self.getTypedRuleContext(OciIamPolicyConditionParser.Condition_valueContext,i)


        def literal_list(self):
            return self.getTypedRuleContext(OciIamPolicyConditionParser.Literal_listContext,0)


        def AND(self):
            return self.getToken(OciIamPolicyConditionParser.AND, 0)

        def getRuleIndex(self):
            return OciIamPolicyConditionParser.RULE_single_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_condition" ):
                listener.enterSingle_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_condition" ):
                listener.exitSingle_condition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_condition" ):
                return visitor.visitSingle_condition(self)
            else:
                return visitor.visitChildren(self)




    def single_condition(self):

        localctx = OciIamPolicyConditionParser.Single_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_single_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.variable_name()
            self.state = 38
            self.match(OciIamPolicyConditionParser.OPERATOR)
            self.state = 41
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21, 22, 23, 24]:
                self.state = 39
                self.condition_value()
                pass
            elif token in [19]:
                self.state = 40
                self.literal_list()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 43
                self.match(OciIamPolicyConditionParser.AND)
                self.state = 44
                self.condition_value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(OciIamPolicyConditionParser.IDENTIFIER)
            else:
                return self.getToken(OciIamPolicyConditionParser.IDENTIFIER, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(OciIamPolicyConditionParser.DOT)
            else:
                return self.getToken(OciIamPolicyConditionParser.DOT, i)

        def getRuleIndex(self):
            return OciIamPolicyConditionParser.RULE_variable_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_name" ):
                listener.enterVariable_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_name" ):
                listener.exitVariable_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_name" ):
                return visitor.visitVariable_name(self)
            else:
                return visitor.visitChildren(self)




    def variable_name(self):

        localctx = OciIamPolicyConditionParser.Variable_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(OciIamPolicyConditionParser.IDENTIFIER)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 48
                self.match(OciIamPolicyConditionParser.DOT)
                self.state = 49
                self.match(OciIamPolicyConditionParser.IDENTIFIER)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(OciIamPolicyConditionParser.STRING_LITERAL, 0)

        def OCID(self):
            return self.getToken(OciIamPolicyConditionParser.OCID, 0)

        def PATTERN_LITERAL(self):
            return self.getToken(OciIamPolicyConditionParser.PATTERN_LITERAL, 0)

        def IDENTIFIER(self):
            return self.getToken(OciIamPolicyConditionParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return OciIamPolicyConditionParser.RULE_condition_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_value" ):
                listener.enterCondition_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_value" ):
                listener.exitCondition_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_value" ):
                return visitor.visitCondition_value(self)
            else:
                return visitor.visitChildren(self)




    def condition_value(self):

        localctx = OciIamPolicyConditionParser.Condition_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 31457280) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Literal_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PAREN(self):
            return self.getToken(OciIamPolicyConditionParser.OPEN_PAREN, 0)

        def literal_list_content(self):
            return self.getTypedRuleContext(OciIamPolicyConditionParser.Literal_list_contentContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(OciIamPolicyConditionParser.CLOSE_PAREN, 0)

        def getRuleIndex(self):
            return OciIamPolicyConditionParser.RULE_literal_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral_list" ):
                listener.enterLiteral_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral_list" ):
                listener.exitLiteral_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral_list" ):
                return visitor.visitLiteral_list(self)
            else:
                return visitor.visitChildren(self)




    def literal_list(self):

        localctx = OciIamPolicyConditionParser.Literal_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_literal_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(OciIamPolicyConditionParser.OPEN_PAREN)
            self.state = 58
            self.literal_list_content()
            self.state = 59
            self.match(OciIamPolicyConditionParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Literal_list_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(OciIamPolicyConditionParser.STRING_LITERAL)
            else:
                return self.getToken(OciIamPolicyConditionParser.STRING_LITERAL, i)

        def PATTERN_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(OciIamPolicyConditionParser.PATTERN_LITERAL)
            else:
                return self.getToken(OciIamPolicyConditionParser.PATTERN_LITERAL, i)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(OciIamPolicyConditionParser.IDENTIFIER)
            else:
                return self.getToken(OciIamPolicyConditionParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(OciIamPolicyConditionParser.COMMA)
            else:
                return self.getToken(OciIamPolicyConditionParser.COMMA, i)

        def getRuleIndex(self):
            return OciIamPolicyConditionParser.RULE_literal_list_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral_list_content" ):
                listener.enterLiteral_list_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral_list_content" ):
                listener.exitLiteral_list_content(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral_list_content" ):
                return visitor.visitLiteral_list_content(self)
            else:
                return visitor.visitChildren(self)




    def literal_list_content(self):

        localctx = OciIamPolicyConditionParser.Literal_list_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_literal_list_content)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 62
                self.match(OciIamPolicyConditionParser.COMMA)
                self.state = 63
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 29360128) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class All_or_anyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALL(self):
            return self.getToken(OciIamPolicyConditionParser.ALL, 0)

        def ANY(self):
            return self.getToken(OciIamPolicyConditionParser.ANY, 0)

        def getRuleIndex(self):
            return OciIamPolicyConditionParser.RULE_all_or_any

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAll_or_any" ):
                listener.enterAll_or_any(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAll_or_any" ):
                listener.exitAll_or_any(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAll_or_any" ):
                return visitor.visitAll_or_any(self)
            else:
                return visitor.visitChildren(self)




    def all_or_any(self):

        localctx = OciIamPolicyConditionParser.All_or_anyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_all_or_any)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





